Release Notes for the Alamaze Turn Parser

Version 1.9.4+
--------------------------------------------------------------------------------
- Lines for Group Movement Plotter do not disappear when changing groups
  - They are not saved, but they will stay there until file is closed.
  - Instead of black, they are now the kingdom's color.

Version 1.9.4
--------------------------------------------------------------------------------
- Updated the grid boxes to be hidden when not highlighted.
  That makes the region borders easier to see, even on the small map.
- Added bindingd to the groups and pop centers so that the location text at
  the bottom of the window would update. That binding had been on the grid boxes,
  but with them gone, there was no location information to display.
- Parser now picks up when a battle occurs. All it grabs is the location,
  the attacker, and the defender.
- GUI now shows crossed swords on the map where a battle occurred (current turn only)
- Battle markers can be toggled with the 'b' key or by menu.
- Battle history is included when you click on a pop center 
- Can get a report of all battles that occurred
- Fixed Issue #23. Closing the output text window no longer keeps you from saving.
- Updated instructions document

Version 1.9.3
--------------------------------------------------------------------------------
- Updated disclaimer at the bottom of the Emissary Tool to be more clear.
- Made Emissary Tool text window taller to make sure you can see disclaimer.

Version 1.9.2
--------------------------------------------------------------------------------
- Correct calculations for the Emissary Tool. They are now closer to what is in
  the Frost Lord 320/330 tool. However, they always assume a worst case but 
  do not take into account any emissaries issing status quo orders. 
- Now parses out voting status from the High Council
- GUI has a report to show the data